# tansiyon-defteri

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: generate-icons.sh  setup-linux-deps.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppHeader.tsx  DeltaLabelRow.tsx  DeltaText.tsx  DesktopOnlyGuard.tsx  ExcelExportWizard.tsx  LargeButton.tsx  MainScreen.tsx  MeasurementEntryWizard.tsx  MeasurementLogTable.tsx  StepIndicator.tsx  VitalBarChart.tsx  WizardCloseButton.tsx
src/constants/: chartThresholds.ts
src/hooks/: useElementSize.ts  useMeasurements.ts  useWindowSize.ts
src/i18n/: appStrings.ts
src/services/: chartDataService.ts  excelExportService.ts  measurementService.ts
src/styles/: appHeader.module.css  charts.module.css  desktopOnly.module.css  global.css  largeButton.module.css  mainScreen.module.css  measurementLogTable.module.css  stepIndicator.module.css  wizard.module.css
src/types/: measurement.ts
src/utils/: formatReadings.ts  validation.ts
