[package]
name = "tansiyon-defteri"
version = "0.1.2"
description = "Tansiyon Defteri - Blood pressure tracking desktop app"
authors = ["barad21"]
edition = "2021"

[lib]
name = "tansiyon_defteri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
